--- a/index.html
+++ b/index.html
@@ -17,17 +17,11 @@
             <div class="menu">
                 <a href="#">Home</a>
             </div>
-
             <div class="menu">
                 <a href="#">Noticias</a>
             </div>
-
             <div class="menu">
-                <a href="#">Curiosidades</a>
-            </div>
-
-            <div class="menu">
-                <a href="#">Fale Conosco</a>
+                <a href="#">Contato</a>
             </div>
         </nav>
     </header>
